# datamecum2024

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: conf.py
notebooks/: lab.ipynb
src/mlops/: mlops.py
src/mlops/ingest_data/: ingest_data.py
