[tool.poetry]
name = "mlops"
version = "0.0.1"
description = "Utilidades para MLOps"
authors = ["Daniel Ruiz"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
django = "^4.0.0"
fastapi = "0.87.0"
optuna = "~3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
